--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 
                      <meta charset="utf-8">
-      <title>Hello, World!</title>
+      <title>Welcome to my website!</title>
              </head>
 <body>
 
-                     Hello, World!
+                     Welcome to my website!
              </body>
 </html>
