--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 <body>
 
                      Welcome to my website!
+      My name is Samm Murphy and I am making this website to showcase the percentage of americans who prefer dogs to cats, as someone who does not have a preference
+      this is a very interesting topic that is very near and dear to my heart. 
+      
+      https://www.statista.com/forecasts/978845/preference-of-dogs-vs-cats-in-the-us 
+      
+      The webiste provided above showcases a pie chart of people who prefer dogs, cats, like them equally, and dislikes them equally. However, if I were to conduct my
+      own study, I would not provide the last two options and make people pick a dog or cat to get a better data set for what I am interested in. 
              </body>
 </html>
